feat: RspecとCommittee導入してとりあえずテストが通ったところ
